--- a/app/src/main/res/layout/activity_contents_list.xml
+++ b/app/src/main/res/layout/activity_contents_list.xml
@@ -6,14 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".ContentsList">
 
-    <TextView
+    <EditText
         android:id="@+id/titlev"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="TextView"
         android:textSize="48sp"
         android:textStyle="italic"
-        app:layout_constraintEnd_toStartOf="@+id/button"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -43,15 +43,6 @@
 
         </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:text="EDIT"
-        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout2"
