--- a/app/src/main/res/layout/activity_contents_list.xml
+++ b/app/src/main/res/layout/activity_contents_list.xml
@@ -7,7 +7,7 @@
     tools:context=".ContentsList">
 
     <EditText
-        android:id="@+id/titlev"
+        android:id="@+id/title_edit"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="TextView"
@@ -24,7 +24,7 @@
         app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/titlev">
+        app:layout_constraintTop_toBottomOf="@+id/title_edit">
 
         <LinearLayout
             android:id="@+id/linearLayout"
@@ -59,8 +59,20 @@
             android:text="SAVE"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.744"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.493" />
+
+        <ImageButton
+            android:id="@+id/add_button"
+            android:layout_width="49dp"
+            android:layout_height="39dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/save"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/ic_add_black_24dp" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
