--- a/app/src/main/res/layout/activity_contents_list.xml
+++ b/app/src/main/res/layout/activity_contents_list.xml
@@ -54,22 +54,23 @@
 
         <Button
             android:id="@+id/save"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="SAVE"
+            android:layout_width="95dp"
+            android:layout_height="78dp"
+            android:background="@drawable/ic_save_black_24dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.744"
+            app:layout_constraintEnd_toStartOf="@+id/add_button"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.493" />
 
         <ImageButton
             android:id="@+id/add_button"
-            android:layout_width="49dp"
-            android:layout_height="39dp"
+            android:layout_width="95dp"
+            android:layout_height="78dp"
+            android:background="@drawable/ic_add_circle_black_24dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/save"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.733"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/ic_add_black_24dp" />
